v1.5.2
Map view type TERRAIN option added for all the maps - FIXED

v1.5.1
Default sort by titles not translatable - FIXED
Listings permalinks are broken if slug matches part of host or base url - FIXED
Popular post view widget is no longer stripping HTML in the excerpt - FIXED
Add a filter to override comment avatar size from themes - ADDED
Added some code to override reviews template from theme - ADDED
Some filters added in best of widget - CHANGED
All widgets changed from PHP4 style constructors to PHP5 __construct, for WordPress 4.3 - CHANGED
Image file for custom field can be enlarged using modal - ADDED
Bottom section widget area inside wrapper div - FIXED
Review text first paragraph not wrapped in `p` tags - FIXED
Moved out avatar from reviews header - CHANGED
Changed terms and conditions link from a text input to a page select under GD>Permalinks for WPML compatibility - CHANGED
Option added in popular post category widget to set default posttype - CHANGED
Recurring events no working with GD import & export - FIXED
Category limit no longer counting child categories - FIXED
In popular post widget View All link in not correct if location filter disabled - FIXED
Disabling address change on marker move now also includes map drag on add listing page - CHANGED
Countries Caribbean Netherlands and Curaçao added to the country DB - ADDED
New map infowindow style added to be more consistent on different size maps - CHANGED
If WPSEO static blog page set GD homepage title wrong - FIXED

v1.5.0
Google analytic countries throws error - FIXED
Some PHP warnings removed when installing - FIXED
User level Subscriber not shown Google Analytics stats - FIXED
GeoDirectory custom script & css should not be printed in backend - FIXED
Added two hooks to search queries - ADDED
Post tags has a DB limit of 254, removed this limit - FIXED
The recent reviews shortcode is missing the title attribute - FIXED
Login error on GD signup page is not appearing - FIXED