@@ -1,5 +1,6 @@
 v1.5.2
 Map view type TERRAIN option added for all the maps - FIXED
+Upgrade function `gd_fix_cpt_rewrite_slug` set to run on every upgrade incase a user misses a version - CHANGED
 
 v1.5.1
 Default sort by titles not translatable - FIXED
